--- a/citavi/citavi.4.4/citavi.nuspec
+++ b/citavi/citavi.4.4/citavi.nuspec
@@ -19,7 +19,7 @@ Organize your knowledge and structure your work,
 Plan tasks – on your own or in a team,
 Write the perfect paper, report, article, or book
 </description>
-<iconUrl>http://citavi.com/images/special/index-logo-EN-258.png</iconUrl>
+<iconUrl>https://cdn.rawgit.com/thigg/chocolateypackages/5e570f3466b781f6183f18d72602b82409bfbec8/citavi/Citavi_0000.png</iconUrl>
     <summary>citavi</summary>
     <releaseNotes />
     <copyright />
