--- a/citavi/citavi.4.4/citavi.nuspec
+++ b/citavi/citavi.4.4/citavi.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>citavi</id>
     <version>4.4</version>
-    <title>citavi</title>
+    <title>Citavi</title>
     <authors>Swiss Academic Software GmbH</authors>
     <owners>FGBS</owners>
     <licenseUrl>http://www.citavi.de/eula</licenseUrl>
